# sfdump

./: .buildinfo  .coveragerc  .env.example  .gitignore  .isort.cfg  .pre-commit-config.yaml  AUTHORS.rst  CHANGELOG.html  CLAUDE.md  CONTRIBUTING.rst  INSTALL.md  LICENSE.txt  Makefile  Makefile.export  README-export.md  README.rst  SCREENSHOT_GUIDE.html  Sondrel_Sales_Invoice_BACKUP.vfp  __main__.py  bootstrap.ps1  genindex.html  gui_todo.html  index.html  install.bat  objects.inv  pyproject.toml  pytest.ini  restore_vf_page.py  search.html  searchindex.js  setup.ps1  setup.py  sf-map.cmd  sfdump-view.cmd  viewer_snap.tgz
.doctrees/: CHANGELOG.doctree  SCREENSHOT_GUIDE.doctree  environment.pickle  gui_todo.doctree  index.doctree
.doctrees/admin-finance/: audit_completeness.doctree  audit_completeness_results.doctree  audit_results_template.doctree  cfo_detailed_report.doctree  cfo_report_dynamic.doctree  finance_user_guide.doctree  index.doctree  internal_vs_redacted_reports.doctree  retention_recommendations.doctree
.doctrees/developer-guide/: architecture_overview.doctree  cli_reference.doctree  index.doctree  indexing_logic.doctree  limits_chunking_resume.doctree  modules_and_flow.doctree  redaction.doctree  testing_and_ci.doctree
.doctrees/reference/: changelog.doctree  contributing.doctree  index.doctree  license.doctree
.doctrees/user-guide/: database_viewer.doctree  exporting_files.doctree  faq.doctree  finding_documents.doctree  generating_reports.doctree  getting-started.doctree  index.doctree  installation.doctree  interpreting_reports.doctree  verifying_and_retrying.doctree
.github/workflows/: ci.yml  e2e.yml  windows-bootstrap.yml  windows-install.yml
_sources/: gui_todo.md.txt  index.md.txt
_sources/admin-finance/: audit_completeness.md.txt  audit_completeness_results.md.txt  audit_results_template.md.txt  cfo_detailed_report.md.txt  internal_vs_redacted_reports.md.txt
_sources/developer-guide/: architecture_overview.md.txt  index.md.txt  testing_and_ci.md.txt
_sources/reference/: contributing.md.txt  index.md.txt
_sources/user-guide/: faq.md.txt  generating_reports.md.txt  installation.md.txt  interpreting_reports.md.txt
admin-finance/: audit_completeness.html  audit_completeness_results.html  audit_results_template.html  cfo_detailed_report.html  cfo_report_dynamic.html  finance_user_guide.html  index.html  internal_vs_redacted_reports.html  retention_recommendations.html
audit/: missing_files.py
developer-guide/: architecture_overview.html  cli_reference.html  index.html  indexing_logic.html  limits_chunking_resume.html  modules_and_flow.html  redaction.html  testing_and_ci.html
docs/: CHANGELOG.md  Makefile  SCREENSHOT_GUIDE.md  conf.py  developer_guide.rst  export_guide.rst  finance_user_guide.rst  gui_todo.md  index.md  index.rst  indexing.rst  sfdump_files_cli_section.rst  user_guide.rst
docs/admin-finance/: audit_completeness_results.md  audit_results_template.md  cfo_detailed_report.md  cfo_report_body.md  cfo_report_dynamic.md  finance_user_guide.md  index.md  retention_recommendations.md
docs/admin-guide/: deployment.md  index.md  security.md
docs/developer-guide/: cli_reference.md  indexing_logic.md  limits_chunking_resume.md  modules_and_flow.md  redaction.md
docs/reference/: changelog.md  license.md
docs/user-guide/: database_viewer.md  exporting_files.md  faq.md  finding_documents.md  generating_reports.md  getting-started.md  index.md  installation.md  interpreting_reports.md  quickstart.md  shared_network_drive.md  verifying_and_retrying.md
reference/: changelog.html  contributing.html  index.html  license.html
scripts/: build_master_documents_index.py  doc_browser.py  download_missing_files.py  html_to_pdf.py  miss.py  probe_summary.py  sf_relationship_map.py  sf_whoami.py  test_invoice_pdf.py
src/: __main__.py
src/sfdump/: .claudeignore  __main__.py  analyse.py  api.py  backfill.py  cli.py  cli_simple.py  command_analyse_missing.py  command_audit.py  command_audit_missing_files.py  command_build_db.py  command_cfo.py  command_check_export.py  command_csv.py  command_db_info.py  command_db_viewer.py  command_docs_for.py  command_docs_index.py  command_files.py  command_files_backfill.py  command_inventory.py  command_list_records.py  command_manifest.py  command_objects.py  command_probe.py  command_rels.py  command_report_missing.py  command_retry_missing.py  command_schema.py  command_sins.py  command_upgrade.py  command_verify.py  command_view_record.py  command_viewer.py  download_missing_files.py  dumper.py  env_loader.py  exceptions.py  files.py  init.py  (+14 more)
tests/: conftest.py  test_api.py  test_cli.py  test_skeleton.py
tests/e2e/: conftest.py  test_simplified_flow.py
tests/integration/: test_api_login.py  test_smoke_cli.py
tests/unit/: test_analyse.py  test_api.py  test_api_config_env.py  test_api_extra.py  test_backfill.py  test_build_record_documents.py  test_cli_args.py  test_cli_basic.py  test_cli_login.py  test_cli_login_show_json.py  test_cli_query.py  test_cli_setup.py  test_cli_subcommands_help.py  test_cli_verbosity.py  test_command_csv_cli.py  test_command_docs_index.py  test_command_files_cli.py  test_command_files_index_builder.py  test_command_manifest_cli.py  test_command_objects_cli.py  test_command_sins.py  test_docs_cli_match.py  test_dumper_core.py  test_dumper_module.py  test_dumper_more_paths.py  test_dumper_record_iter.py  test_env_loader.py  test_files_chunking.py  test_files_dumpers_real_paths.py  test_files_empty_and_target.py  test_files_error_and_empty.py  test_files_happy_path.py  test_files_module.py  test_install_docs.py  test_inventory.py  test_logging_config.py  test_manifest_write_and_scan.py  test_pkg_imports.py  (+22 more)
tools/: coverage_gate.py  debug_content_version.py  patch_master_local_paths.py  rebuild_master_index_2025_11_28.py
user-guide/: database_viewer.html  exporting_files.html  faq.html  finding_documents.html  generating_reports.html  getting-started.html  index.html  installation.html  interpreting_reports.html  verifying_and_retrying.html
(+42 files in other folders)
