[build-system]
# Use modern backend with versioning via setuptools_scm
requires = ["setuptools>=69", "setuptools_scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sfdump"
dynamic = ["version"]
description = "A project scaffolded using PyScaffold Clickstart"
readme = "README.rst"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]

# Runtime-only deps
dependencies = [
    "click>=8.1",
    "requests>=2.31",
    "tqdm>=4.66",
    "python-dotenv>=1.0.1",
    "dotenv",
    "pandas",
    "pypandoc",
    "pymupdf",
]

[project.optional-dependencies]
# Everything needed for local dev, tests, linting & releases
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-xdist>=3.6",
    "pytest-timeout>=2.3",
    "ruff>=0.6",
    "pre-commit>=3.7",
    "build>=1.2",
    "twine>=5",
    "setuptools_scm>=8.0",

    # Documentation stack
    "sphinx>=8",
    "myst-parser>=2",
    "furo>=2024.1.29",
    "linkify-it-py>=2.0",
]

# PDF generation requires system LaTeX packages (not installable via pip):
#   Ubuntu/Debian: sudo apt-get install texlive-latex-base texlive-xetex \
#                  texlive-fonts-recommended texlive-fonts-extra latexmk \
#                  tex-gyre fonts-freefont-ttf
#   macOS:         brew install --cask mactex-no-gui
#   Windows:       Install MiKTeX from https://miktex.org/
pdf = [
    "sphinx>=8",
    "myst-parser>=2",
]

[project.urls]
Homepage = "https://example.com/sfdump"
Repository = "https://github.com/example/sfdump"

[project.scripts]
sf = "sfdump.cli_simple:cli"
sfdump = "sfdump.cli:cli"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "dirty-tag"
fallback_version = "0.0.1"
write_to = "src/sfdump/_version.py"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --disable-warnings"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src/sfdump"]
omit = [
  "tests/*",

  # ignore entrypoints / interactive Streamlit apps
  "*__main__.py",
  "*db_app.py",
  "*files_app.py",

  # Streamlit UI code - requires integration/e2e testing, not unit tests
  "src/sfdump/viewer_app/apps/*",
  "src/sfdump/viewer_app/ui/*",
  "src/sfdump/viewer_app/preview/*",
  "src/sfdump/viewer_app/navigation/*",
  "src/sfdump/viewer_app/config.py",
  "src/sfdump/download_missing_files.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
