[build-system]
# Use modern backend with versioning via setuptools_scm
requires = ["setuptools>=69", "setuptools_scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sfdump"
dynamic = ["version"]
description = "Salesforce data export and archival tool with verification, SQLite database, and Streamlit viewer"
readme = "README.rst"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE.txt"]
authors = [{ name = "Kevin Steptoe", email = "ksteptoe@gmail.com" }]
keywords = ["salesforce", "export", "backup", "archival", "data-migration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
]

# Runtime-only deps
dependencies = [
    "click>=8.1",
    "requests>=2.31",
    "tqdm>=4.66",
    "python-dotenv>=1.0.1",
    "pandas",
    "openpyxl>=3.1",
    "extract-msg>=0.41",
    "pypandoc",
    "pymupdf",
    "streamlit>=1.30",
]

[project.optional-dependencies]
# Everything needed for local dev, tests, linting & releases
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-xdist>=3.6",
    "pytest-timeout>=2.3",
    "ruff>=0.6",
    "pre-commit>=3.7",
    "build>=1.2",
    "twine>=5",
    "setuptools_scm>=8.0",

    # Documentation stack
    "sphinx>=8",
    "myst-parser>=2",
    "furo>=2024.1.29",
    "linkify-it-py>=2.0",
]

# PDF generation requires system LaTeX packages (not installable via pip):
#   Ubuntu/Debian: sudo apt-get install texlive-latex-base texlive-xetex \
#                  texlive-fonts-recommended texlive-fonts-extra latexmk \
#                  tex-gyre fonts-freefont-ttf
#   macOS:         brew install --cask mactex-no-gui
#   Windows:       Install MiKTeX from https://miktex.org/
pdf = [
    "sphinx>=8",
    "myst-parser>=2",
]

[project.urls]
Homepage = "https://github.com/ksteptoe/sfdump"
Repository = "https://github.com/ksteptoe/sfdump"

[project.scripts]
sf = "sfdump.cli_simple:cli"
sfdump = "sfdump.cli:cli"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"
fallback_version = "0.0.1"
write_to = "src/sfdump/_version.py"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --disable-warnings --ignore=tests/e2e"
testpaths = ["tests"]
# E2E tests are excluded by default. To run them:
#   SF_E2E_TESTS=true pytest tests/e2e/ -v

[tool.coverage.run]
branch = true
source = ["src/sfdump"]
omit = [
  "tests/*",

  # Entrypoints
  "*/__main__.py",
  "*/db_app.py",
  "*/files_app.py",

  # Streamlit UI code - requires integration/e2e testing
  "*/viewer_app/apps/*",
  "*/viewer_app/ui/*",
  "*/viewer_app/preview/*",
  "*/viewer_app/navigation/*",
  "*/viewer_app/config.py",

  # Complex scripts needing integration tests
  "*/download_missing_files.py",

  # CLI command files - Click wiring, tested via integration
  "*/command_*.py",

  # CLI entry points
  "*/cli.py",
  "*/cli_simple.py",

  # Orchestrator - high-level workflow, tested via E2E
  "*/orchestrator.py",

  # Traversal service - tested via E2E
  "*/services/traversal.py",

  # Probe summary - complex visualization
  "*/probe_summary.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
